--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25"
   },
   "dependencies": {
+    "apollo-server-express": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
