--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,16 +6,19 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r esm",
     "start": "node -r esm ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "apollo-server-express": "^3.0.1",
+    "apollo-server-express": "^2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^15.5.1"
   }
 }
